News UAT/force-app/main/default/objects/NXX2_SocialForm_Staging__c/NXX2_SocialForm_Staging__c.object-meta.xml
<CustomObject>
    <description>This will contain record of social form from google cloud storage</description>
    <label>NXX2 SocialForm Staging</label>
    <nameField>
        <label>NXX2 SocialForm Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NXX2 SocialForms Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>