News UAT/force-app/main/default/objects/NXX2_SocialForm_Staging__c/fields/Client_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Client_Criteria__c</fullName>
    <label>Client Criteria</label>
    <length>250</length>
    <type>Text</type>
</CustomField>