News UAT/force-app/main/default/objects/NXX2_SocialForm_Staging__c/fields/Privacy_Url__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Url__c</fullName>
    <label>Privacy Url</label>
    <length>250</length>
    <type>Text</type>
</CustomField>