News UAT/force-app/main/default/objects/NXX2_SocialForm_Staging__c/fields/Related_Proof__c.field-meta.xml
<CustomField>
    <fullName>Related_Proof__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Proof</label>
    <referenceTo>SocialCampaign__c</referenceTo>
    <relationshipLabel>NXX2 SocialForms Staging</relationshipLabel>
    <relationshipName>NXX2_SocialForms_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>