News UAT/force-app/main/default/objects/NXX2_SocialForm_Staging__c/fields/Related_Proof_Ad__c.field-meta.xml
<CustomField>
    <fullName>Related_Proof_Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual proof ad for migration</description>
    <label>Related Proof Ad</label>
    <referenceTo>SocialAd__c</referenceTo>
    <relationshipLabel>NXX2 SocialForms Staging</relationshipLabel>
    <relationshipName>NXX2_SocialForms_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>