News UAT/force-app/main/default/objects/NXX2_SocialForm_Staging__c/fields/SocialForm_Name__c.field-meta.xml
<CustomField>
    <fullName>SocialForm_Name__c</fullName>
    <label>SocialForm Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>