News UAT/force-app/main/default/objects/NXX2_SocialForm_Staging__c/fields/Thankyou_Url__c.field-meta.xml
<CustomField>
    <fullName>Thankyou_Url__c</fullName>
    <label>Thankyou Url</label>
    <length>250</length>
    <type>Text</type>
</CustomField>